main.css
html, body {
 min-height: 100vh; 
}

footer {
    color: white;
    padding: 15px;
    left: 0;
    bottom: 0;
    font-size: small;
}

footer a {
  color:white;
}

footer a:hover {
  color: lightblue;
}

a {
  color: black;
}

.social-media {
  width: 50px;
  
}

.social-media:hover {
  opacity: 0.5;
  cursor: pointer;
}

